--- a/views/default/add.html
+++ b/views/default/add.html
@@ -1,9 +1,34 @@
 {{extend 'layout.html'}}
 
 <div class="mycontent">
+    <div class="container">
 
-    <h1>New Checklist</h1>
+        <h1>Create a Job</h1>
 
-    {{=form}}
+        <div class="half compressible" style="padding: 10px 25px 10px 25px;">
 
+            {{=form.custom.begin}}
+
+                <div class="form-group">
+                    <label for="job_job_id">Job ID</label>
+                    {{=form.custom.widget.job_id}}
+                </div>
+
+                <div class="form-group">
+                    <label for="job_name">Job Name</label>
+                    {{=form.custom.widget.name}}
+                </div>
+
+                <div class="form-group">
+                    <label for="job_color">Color</label>
+                    <br/>
+                    {{=form.custom.widget.color}}
+                </div>
+
+                {{=form.custom.submit}}
+            {{=form.custom.end}}
+        </div>
+
+        <div class="half compressible"></div>
+    </div>
 </div>
