--- a/views/default/index.html
+++ b/views/default/index.html
@@ -17,7 +17,7 @@
 
   {{if not jobs:}}
 
-    <p>You don't have any jobs.  Press on the Add button above to create one.</p>
+    <p>You don't have any jobs.  Press on the 'Add' button above to create one.</p>
 
   {{pass}}
 
