--- a/views/default/index.html
+++ b/views/default/index.html
@@ -4,35 +4,22 @@
 {{end}}
 
 <div class="main_content">
-
   <!-- Here goes your main HTML code. -->
   {{if auth.user is not None:}}
 
-  <p><a class="btn red" href="{{=URL('default', 'add')}}"><i class="fa fa-plus"></i> Add</a>
-  </p>
+    
+    {{if not even_jobs and not odd_jobs:}}
+    
+    {{pass}}
 
-  {{for j in jobs:}}
-      <div class="checklist_title">{{=j.name}}</div>
-  {{pass}}
+    {{else:}}
+        <h1 class="main_title">Welcome!</h1>
 
-  {{if not jobs:}}
-
-    <p>You don't have any jobs.  Press on the 'Add' button above to create one.</p>
-
-  {{pass}}
-
-  {{else:}}
-
-   <h1 class="main_title">Welcome!</h1>
-
-    <p class="explanation">This site will help you organize your life by storing your checklists.
+        <p class="explanation">This site will help you organize your life by storing your checklists.
         Please log in to use it.</p>
 
-    <div class="login_button">
-        <a href="{{=URL('default', 'user')}}" class="btn">Login</a>
-    </div>
-
-  {{pass}}
-
+        <div class="login_button">
+            <a href="{{=URL('default', 'user')}}" class="btn">Login</a>
+        </div>
+    {{pass}}
 </div>
-
