--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -14,11 +14,42 @@
     text-overflow: ellipsis;
 }
 
+.topButtons {
+    margin: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 100%;
+}
+
+.noDecoration {
+    text-decoration: none;
+    color: white;
+}
+
+.noDecoration:hover {
+    color: lightblue !important;
+}
+
+.spaced {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.topButtonIcons {
+    border-radius: 4px;
+    border: 2px solid #000;
+    background-color: grey;
+    margin-bottom: -2px;
+    display: inline-block;
+    color: white;
+}
+
 .roundedCorners2 {
     border-radius: 4px;
     border: 2px solid #000;
     background: rgba(0, 0, 0, 0.4);
     margin: 8px;
+    margin-top: 0px;
     width: 100%;
 }
 
@@ -34,7 +65,7 @@
 }
 
 .whiteGloss {
-    border-radius: 2px;
+    border-radius: 0px;
     width: 100%;
     height: 75px;
 }
@@ -105,6 +136,12 @@
 .commentError {
     color: red;
     padding: 5px;
+}
+
+.loadMore {
+    color: white;
+    background-color: #388E8E;
+    width: 100%;
 }
 
 /*** grid ***/
