--- a/views/layout.html
+++ b/views/layout.html
@@ -32,10 +32,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{{=URL('default', 'index')}}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" id="homeLink" href="{{=URL('default', 'index')}}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{=URL('default', 'jobs')}}">Your Jobs</a>
+        <a class="nav-link" id="jobsLink" href="{{=URL('default', 'jobs')}}">Shared Jobs</a>
       </li>
     </ul>
       <ul class="navbar-nav ml-auto">
