--- a/views/default/jobs.html
+++ b/views/default/jobs.html
@@ -14,7 +14,7 @@
             <div class="container" style="padding: 0px; background-color: rgba(32, 32, 32);">
                 <div class="header">
                     <div class="playerTwo">
-                        <h2 style="color: white; padding-left: 18px;">Your Jobs</h2>
+                        <h2 style="color: white; padding-left: 18px;">Shared Jobs</h2>
                     </div>
                     <div class="playerOne">
                         
@@ -41,12 +41,6 @@
                         
                     </div>
                 </div>
-            </div>
-        </div>
-    
-        <div class="container">
-            <div style="margin-bottom: 0px; margin-right: 18px; margin-top: 10px; text-align: right;">
-                <a href="{{=URL('default', 'create')}}"><button class="createJobButton"><i class="fa fa-plus" style="margin-right: 10px;"></i>Create new</button></a>
             </div>
         </div>
 
@@ -99,6 +93,8 @@
                 
                 
                 <script>
+                    $("#jobsLink").addClass('active');
+                    
                     if($('#pagination').data("twbs-pagination")){
                         $('#pagination').twbsPagination('destroy');
                     }
